[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "finite-state-sdk"
version = "0.1.5"
authors = [
    "Finite State, Inc. <developer-tools@finitestate.io>"
]
maintainers = [
    "Finite State, Inc. <developer-tools@finitestate.io>"
]
repository = "https://www.github.com/FiniteStateInc/finite-state-sdk-python"
homepage = "https://github.com/FiniteStateInc/finite-state-sdk-python"
description = "The official Finite State Python SDK."
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
bleach = "==6.0.0"
build = "==0.10.0"
certifi = "==2023.5.7"
charset-normalizer = "==3.2.0"
cyclonedx-bom = "==3.11.2"
cyclonedx-python-lib = "==3.1.5"
docutils = "==0.20.1"
idna = "==3.4"
importlib-metadata = "==6.8.0"
jaraco-classes = "==3.3.0"
Jinja2 = "==3.1.2"
keyring = "==24.2.0"
markdown-it-py = "==3.0.0"
MarkupSafe = "==2.1.3"
mdurl = "==0.1.2"
more-itertools = "==9.1.0"
packageurl-python = "==0.11.1"
packaging = "==23.1"
pdoc = "==14.0.0"
pip-requirements-parser = "==32.0.1"
pkginfo = "==1.9.6"
Pygments = "==2.15.1"
pyparsing = "==3.1.0"
pyproject_hooks = "==1.0.0"
readme-renderer = "==40.0"
requests = "==2.31.0"
requests-toolbelt = "==1.0.0"
rfc3986 = "==2.0.0"
six = "==1.16.0"
sortedcontainers = "==2.4.0"
toml = "==0.10.2"
tomli = "==2.0.1"
twine = "==4.0.2"
urllib3 = "==2.0.3"
webencodings = "==0.5.1"
zipp = "==3.16.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
libcst = "^1.0.1"
rich = "^13.5.2"
typer = "^0.9.0"
pytest = "^7.4.2"
pytest-cov = "^3.0.0"
flake8-pyproject = "^1.2.3"
darker = "^1.7.2"

[project.urls]
"Bug Tracker" = "https://github.com/FiniteStateInc/finite-state-sdk-python/issues"

exclude = ".gitignore"

[tool.black]
line-length = 128
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
  /(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  )/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 128
atomic = true
skip = ["venv/"]

[tool.flake8]
# E221: Multiple spaces before operator
# E402: Module level import not at top of file
# E501: Line too long
# W503: Line break occurred before a binary operator
ignore = ["E221", "E402", "E501", "W503", "E203"]
exclude = '''
  /(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  )/
'''
