[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "finite-state-sdk-docs"
version = "0.1.9"
authors = [
    "Finite State, Inc. <developer-tools@finitestate.io>"
]
maintainers = [
    "Finite State, Inc. <developer-tools@finitestate.io>"
]
repository = "https://www.github.com/FiniteStateInc/finite-state-sdk-python"
homepage = "https://github.com/FiniteStateInc/finite-state-sdk-python"
description = "The official Finite State Python SDK."
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
docutils = "^0.21.1"
pdoc = "^14.0.0"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
